--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "utila",
   "version": "0.1.0",
   "description": "notareplacementforunderscore",
-  "main": "index.js",
+  "main": "./scripts/js/lib/utila.js",
   "dependencies": {
-    "chai-as-promised": "~3.3.1",
-    "amdefine": "~0.0.8",
+    "amdefine": "~0.0.8"
+  },
+  "devDependencies": {
     "eyespect": "~0.1.10",
     "chai": "~1.7.2",
     "when": "~2.3.0"
-  },
-  "devDependencies": {},
+    },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "directories": {
+    "lib": "js"
   },
   "keywords": [
     "utility",
