--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "utila",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "notareplacementforunderscore",
   "main": "scripts/js/lib/utila.js",
-  "dependencies": {},
+  "dependencies": {
+    "amdefine": "~0.1.0"
+  },
   "devDependencies": {
     "coffee-script": "~1.6.3",
     "little-popo": "~0.1.2"
