--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "utila",
-  "version": "0.4.0",
+  "version": "0.5.0-dev.1",
   "description": "notareplacementforunderscore",
   "main": "lib/utila.js",
   "devDependencies": {
